# hyperloop

./: .gitignore  .pre-commit-config.yaml  .worker-result.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yaml  release.yaml
.hyperloop/agents/: implementer-patch.yaml  kustomization.yaml
base/: auditor.yaml  decomposer.yaml  implementer.yaml  integration-summarizer.yaml  kustomization.yaml  merge-resolver.yaml  pm.yaml  pr-reviewer.yaml  process-improver.yaml  process.yaml  rebase-resolver.yaml  verifier.yaml  workflow.yaml
dashboard/app/: package.json
dashboard/app/components/: PipelineIndicator.vue  ReviewTimeline.vue  SummaryCard.vue
dashboard/app/composables/: useApi.ts
dashboard/app/pages/: index.vue
dashboard/server/: __init__.py  models.py
dashboard/server/routes/: summary.py  tasks.py
docs/: configuration.md  vision-reference.md
skills/develop/: SKILL.md
skills/spec/: SKILL.md
specs/: ambient-runtime.md  architecture.spec.md  baseline.spec.md  cli.spec.md  dashboard.md  dashboard.spec.md  index.spec.md  nfr.spec.md  observability.md  observability.spec.md  ports.spec.md  prompt-composition.md  prompt-composition.spec.md  reconciler.spec.md  spec.md  state-management.spec.md  task-processor.spec.md  vision.spec.md
specs/prompts/: checklist.md  rules.md
specs/prompts/checks/: check_result_file.sh
specs/reconciliation/: agent-executor.spec.md  agent-prompts.spec.md  configuration.spec.md  git-adapters.spec.md  observability.spec.md  plan.spec.md  ports.spec.md  prompt-composition.spec.md  reconciler.spec.md  state-machine.spec.md  task-lifecycle.spec.md
specs/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md
src/dashboard/: __init__.py
src/dashboard/app/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
src/dashboard/server/: agents_loader.py  app.py  deps.py  models.py  reviews.py
src/hyperloop/: __main__.py  cli.py  compose.py  config.py  logging.py  loop.py  pr.py  wiring.py
src/hyperloop/adapters/: git_state.py  local.py  matrix_probe.py  matrix_setup.py  probe.py  retry.py  serial.py  structlog_probe.py  verdict.py
src/k_orchestrate/: __main__.py  cli.py  compose.py  config.py  loop.py
tests/: test_ambient_runtime.py  test_baseline.py  test_cli.py  test_compose.py  test_config.py  test_dashboard.py  test_dashboard_concurrency.py  test_decide.py  test_deps.py  test_e2e.py  test_e2e_migration.py  test_fakes.py  test_feedback.py  test_fixes.py  test_foundation_types.py  test_git_state.py  test_ingest_port.py  test_local_runtime.py  test_loop.py  test_matrix_probe.py  test_model.py  test_new_adapters.py  test_otel_probe.py  test_pipeline.py  test_port_contracts.py  test_pr.py  test_probe.py  test_reconciler.py  test_repo_isolation.py  test_review_parsing.py  test_runtime_retry.py  test_sdk_e2e.py  test_serial_agents.py  test_smoke.py  test_state_contract.py  test_strenum_types.py  test_structlog_probe.py  test_sync_conflict.py  test_task_parsing.py  test_task_processor.py  (+1 more)
tests/cli/: test_describe_spec.py  test_describe_task.py  test_format_table.py  test_format_time.py  test_get_events.py  test_get_specs.py  test_get_tasks.py  test_init.py  test_read_only.py  test_run.py
tests/fakes/: __init__.py  action.py  channel.py  feedback.py  gate.py  hook.py  notification.py  pr.py  probe.py  runtime.py  serial.py  signal.py  spec_source.py  state.py  step_executor.py
tests/reconciliation/: test_agent_runtime.py  test_base_templates.py  test_composition_root.py  test_configuration.py  test_observer.py  test_plan.py  test_plan_store.py  test_prompt_composer.py  test_rebase_context.py  test_reconciler.py  test_reconciler_lifecycle.py  test_spec_source.py  test_workspace_manager.py  test_workspace_manager_fake.py
workflows/: spec-change.workflow.md
workflows/development/: next-unit-of-work.workflow.md
(+251 files in other folders)
