[project]
name = "hyperloop"
version = "0.1.0"
description = "Spec-driven reconciliation engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml>=6.0.3",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
