[project]
name = "hyperloop"
version = "0.1.0"
description = "Spec-driven reconciliation engine"
requires-python = ">=3.12"
dependencies = [
    "click==8.2.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml>=6.0.3",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
hyperloop = "hyperloop.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]
